# aclimate_v3_mcp

./: .env.example  Dockerfile  pyproject.toml  readme.md
src/aclimate_mcp/: prompts.py  resources.py  server.py  settings.py  tools.py
src/aclimate_sdk/: aclimate_client.py  context_builder.py
