[project]
name = "aclimate-mcp"
version = "0.1.0"
description = "MCP for AClimate API"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.27.0",
    "tenacity>=9.1.4",
]

[project.scripts]
aclimate-mcp = "aclimate_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aclimate_mcp", "src/aclimate_sdk"]
